Resolved #48: BiddableValuesFilter is now easier to read